--- a/static/sorfim.html
+++ b/static/sorfim.html
@@ -18,6 +18,9 @@
         li:nth-child(3) {
             color: green;
         }
+        li:nth-child(4) {
+            color: beige;
+        }
     </style>
 </head>
 <body>
@@ -26,6 +29,7 @@
         <li>איתי פאלופ</li>
         <li>נדב צריך טיפול</li>
         <li>קובי אשכרה מצחיק</li>
+        <li>נעמה היא חביבת הקהל ❤️</li>
     </ul>
 </body>
 </html>
