--- a/static/talor-wiki.html
+++ b/static/talor-wiki.html
@@ -106,7 +106,7 @@
 <body>
     <div class="container">
         <div class="progress-container">
-            <img src="./globe.png" />
+            <img src="./globe.webp" />
             <progress id="beaker" max="500" value="0"></progress>
             <div id="editCount" class="edit-count"></div>
         </div>
