--- a/public/mac-apps.html
+++ b/public/mac-apps.html
@@ -1,53 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Suggested Mac Apps</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-
-<body class="font-sans bg-gray-100 text-gray-800 p-4 overflow-hidden box-content">
-    <h3 class="mb-3 font-semibold flex justify-between items-center">Awesome Mac Apps (in order) <a target="_blank"
-            href="https://github.com/netanel-haber/profile/edit/gh-pages/mac-apps.html"><img class="h-[20px]"
-                src="/github.webp" alt="Edit List on github" /></a></h3>
-    <ol class="list-none p-0">
-        <li class="mb-2 p-1 bg-white border border-gray-200 rounded-lg flex items-center shadow-sm">
-            <a href="https://alt-tab-macos.netlify.app/" target="_blank"
-                class="text-blue-600 font-bold no-underline hover:underline">AltTab</a>
-            <span class="mx-2">-</span>Windows-like
-            <kbd
-                class="mx-1 px-2 py-1 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded">Cmd</kbd>+
-            <kbd
-                class="px-2 py-1 text-xs font-semibold text-gray-800 bg-gray-100 border border-gray-200 rounded">Tab</kbd>
-        </li>
-        <li class="mb-2 p-1 bg-white border border-gray-200 rounded-lg flex items-center shadow-sm">
-            <a href="https://rectangleapp.com/" target="_blank"
-                class="text-blue-600 font-bold no-underline hover:underline">Rectangle</a>
-            <span class="mx-2">-</span>Snap windows with keyboard
-        </li>
-        <li class="mb-2 p-1 bg-white border border-gray-200 rounded-lg flex items-center shadow-sm">
-            <a href="https://menubarx.app/" target="_blank"
-                class="text-blue-600 font-bold no-underline hover:underline">MenuBarX</a>
-            <span class="mx-2">-</span>Dropdown browser tabs from top bar
-        </li>
-        <li class="mb-2 p-1 bg-white border border-gray-200 rounded-lg flex items-center shadow-sm">
-            <a href="https://github.com/dwarvesf/hidden" target="_blank"
-                class="text-blue-600 font-bold no-underline hover:underline">HiddenBar</a>
-            <span class="mx-2">-</span>Simplify top bar icons
-        </li>
-        <li class="mb-2 p-1 bg-white border border-gray-200 rounded-lg flex items-center shadow-sm">
-            <a href="https://brightintosh.de" target="_blank"
-                class="text-blue-600 font-bold no-underline hover:underline">Brightintosh</a>
-            <span class="mx-2">-</span>Always allow max brightness
-        </li>
-        <li class="mb-2 p-1 bg-white border border-gray-200 rounded-lg flex items-center shadow-sm">
-            <a href="https://freemacsoft.net/appcleaner/" target="_blank"
-                class="text-blue-600 font-bold no-underline hover:underline">AppCleaner</a>
-            <span class="mx-2">-</span>Delete apps and all their files
-        </li>
-    </ol>
-</body>
-
+   <head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <title>Suggested Mac Apps</title>
+      <style>
+         body {
+         font-family: sans-serif;
+         background-color: #f3f4f6;
+         color: #1f2937;
+         padding: 1rem;
+         overflow: hidden;
+         box-sizing: border-box;
+         }
+         h3 {
+         margin-bottom: 0.75rem;
+         font-weight: 600;
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         }
+         ol {
+         list-style: none;
+         padding: 0;
+         }
+         li {
+         margin-bottom: 0.5rem;
+         padding: 0.25rem;
+         background-color: #ffffff;
+         border: 1px solid #e5e7eb;
+         border-radius: 0.375rem;
+         display: flex;
+         align-items: center;
+         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+         }
+         a {
+         color: #2563eb;
+         font-weight: bold;
+         text-decoration: none;
+         }
+         a:hover {
+         text-decoration: underline;
+         }
+         kbd {
+         margin: 0 0.25rem;
+         padding: 0.25rem 0.5rem;
+         font-size: 0.875rem;
+         font-weight: 600;
+         color: #1f2937;
+         background-color: #f3f4f6;
+         border: 1px solid #e5e7eb;
+         border-radius: 0.25rem;
+         }
+         span {
+         margin: 0px 6px;
+         }
+      </style>
+   </head>
+   <body>
+      <h3>Awesome Mac Apps (in order) <a target="_blank" href="https://github.com/netanel-haber/profile/edit/gh-pages/mac-apps.html"><img height="20px" src="/github.webp" alt="Edit List on github" /></a></h3>
+      <ol>
+         <li>
+            <a href="https://alt-tab-macos.netlify.app/" target="_blank">AltTab</a>
+            <span>-</span>Windows-like
+            <kbd>Cmd</kbd>+
+            <kbd>Tab</kbd>
+         </li>
+         <li>
+            <a href="https://rectangleapp.com/" target="_blank">Rectangle</a>
+            <span>-</span>Snap windows with keyboard
+         </li>
+         <li>
+            <a href="https://menubarx.app/" target="_blank">MenuBarX</a>
+            <span>-</span>Dropdown browser tabs from top bar
+         </li>
+         <li>
+            <a href="https://github.com/dwarvesf/hidden" target="_blank">HiddenBar</a>
+            <span>-</span>Simplify top bar icons
+         </li>
+         <li>
+            <a href="https://brightintosh.de" target="_blank">Brightintosh</a>
+            <span>-</span>Always allow max brightness
+         </li>
+         <li>
+            <a href="https://freemacsoft.net/appcleaner/" target="_blank">AppCleaner</a>
+            <span>-</span>Delete apps and all their files
+         </li>
+      </ol>
+   </body>
 </html>
