--- a/public/mac-apps.html
+++ b/public/mac-apps.html
@@ -86,6 +86,10 @@
             <a href="https://freemacsoft.net/appcleaner/" target="_blank">AppCleaner</a>
             <span>-</span>Delete apps and all their files
          </li>
+         <li>
+            <a href="https://apps.apple.com/us/app/amphetamine/id937984704" target="_blank">Amphetamine</a>
+            <span>-</span>Keep Your Mac Awake
+         </li>
       </ol>
    </body>
 </html>
