No top level await

--- a/public/tick.html
+++ b/public/tick.html
@@ -1,19 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stock Price</title>
 </head>
+
 <body>
-    <script type="module">
+    <script>
         const t = new URLSearchParams(window.location.search).get('ticker');
         const proxyUrl = 'https://api.allorigins.win/get?url=';
         const targetUrl = `https://query1.finance.yahoo.com/v8/finance/chart/${t}?interval=1d&range=1mo`;
-        const response = await (await fetch(proxyUrl + encodeURIComponent(targetUrl))).json();
-        const data = JSON.parse(response.contents);
-        const avgPrice = data.chart.result[0].indicators.quote[0].close.reduce((p, c, _, a) => p + c / a.length, 0).toFixed(2);
-        document.body.appendChild(document.createTextNode(avgPrice));
+        const url = proxyUrl + encodeURIComponent(targetUrl);
+        fetch(url).then((res) => res.json()).then((res) => {
+            const data = JSON.parse(res.contents);
+            const avgPrice = data.chart.result[0].indicators.quote[0].close.reduce((p, c, _, a) => p + c / a.length, 0).toFixed(2);
+            document.body.appendChild(document.createTextNode(avgPrice));
+        });
     </script>
 </body>
+
 </html>
