Add Authenticator to mac-apps

--- a/public/mac-apps.html
+++ b/public/mac-apps.html
@@ -79,6 +79,10 @@
             <span>-</span>Simplify top bar icons
          </li>
          <li>
+            <a href="https://apps.apple.com/us/app/authenticator-app/id1538761576" target="_blank">Authenticator (2Stable)</a>
+            <span>-</span>2FA Authentication MFA & OTP
+         </li>
+         <li>
             <a href="https://brightintosh.de" target="_blank">Brightintosh</a>
             <span>-</span>Always allow max brightness
          </li>
