--- a/public/ubuntu-apps.html
+++ b/public/ubuntu-apps.html
@@ -31,7 +31,7 @@
          border: 1px solid #e5e7eb;
          border-radius: 0.375rem;
          display: flex;
-         align-items: center;
+         flex-direction: column;
          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
          }
          a {
@@ -55,13 +55,32 @@
          span {
          margin: 0px 6px;
          }
+         .sub-list {
+         list-style: disc;
+         padding-left: 1.5rem;
+         margin-top: 0.5rem;
+         color: #4b5563;
+         }
+         .sub-list li {
+         margin-bottom: 0.25rem;
+         }
+         .note {
+         font-size: 0.875rem;
+         color: #6b7280;
+         margin-top: 0.25rem;
+         }
       </style>
    </head>
    <body>
-      <h3>Awesome Ubuntu Apps (in order) <a target="_blank" href="https://github.com/netanel-haber/profile/edit/gh-pages/ubuntu-apps.html"><img height="20px" src="/github.webp" alt="Edit List on github" /></a></h3>
+      <h3>Awesome Ubuntu Apps (in order) <a target="_blank" href="https://github.com/netanel-haber/profile/edit/main/public/ubuntu-apps.html"><img height="20px" src="/github.webp" alt="Edit List on github" /></a></h3>
       <ol>
          <li>
             <a href="https://mattjakeman.com/apps/extension-manager" target="_blank">Gnome Extension Manager</a>
+            <ol class="sub-list">
+               <li>
+                  <a href="https://extensions.gnome.org/extension/1723/wintile-windows-10-window-tiling-for-gnome/" target="_blank">WinTile: Windows 10 Window Tiling for Gnome</a>
+               </li>
+            </ol>
          </li>
       </ol>
    </body>
