--- a/public/mac-apps.html
+++ b/public/mac-apps.html
@@ -10,7 +10,7 @@
          background-color: #f3f4f6;
          color: #1f2937;
          padding: 1rem;
-         overflow: hidden;
+         overflow: auto;
          box-sizing: border-box;
          }
          h3 {
