--- a/public/ubuntu-apps.html
+++ b/public/ubuntu-apps.html
@@ -82,6 +82,9 @@
                </li>
             </ol>
          </li>
+         <li>
+            <a href="https://guake.readthedocs.io/en/latest/user/installing.html#system-wide-installation" target="_blank">Guake</a> - Drop-down terminal
+         </li>
       </ol>
    </body>
 </html>
