--- a/public/ubuntu-apps.html
+++ b/public/ubuntu-apps.html
@@ -31,8 +31,10 @@
          border: 1px solid #e5e7eb;
          border-radius: 0.375rem;
          display: flex;
-         flex-direction: column;
          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+         }
+         li.has-inner-list {
+         flex-direction: column;
          }
          a {
          color: #2563eb;
@@ -74,7 +76,7 @@
    <body>
       <h3>Awesome Ubuntu Apps (in order) <a target="_blank" href="https://github.com/netanel-haber/profile/edit/main/public/ubuntu-apps.html"><img height="20px" src="/github.webp" alt="Edit List on github" /></a></h3>
       <ol>
-         <li>
+         <li class="has-inner-list">
             <a href="https://mattjakeman.com/apps/extension-manager" target="_blank">Gnome Extension Manager</a>
             <ol class="sub-list">
                <li>
@@ -83,7 +85,7 @@
             </ol>
          </li>
          <li>
-            <a href="https://guake.readthedocs.io/en/latest/user/installing.html#system-wide-installation" target="_blank">Guake</a> - Drop-down terminal
+            <a href="https://guake.readthedocs.io/en/latest/user/installing.html#system-wide-installation" target="_blank">Guake</a><span>-</span>Drop-down terminal
          </li>
       </ol>
    </body>
