--- a/public/ubuntu-apps.html
+++ b/public/ubuntu-apps.html
@@ -87,6 +87,9 @@
          <li>
             <a href="https://guake.readthedocs.io/en/latest/user/installing.html#system-wide-installation" target="_blank">Guake</a><span>-</span>Drop-down terminal
          </li>
+         <li>
+            <a href="https://xournalpp.github.io/installation/linux/" target="_blank">Xournal++</a><span>-</span>Interacting with PDFs
+         </li>
       </ol>
    </body>
 </html>
