--- a/public/vscode-extensions.html
+++ b/public/vscode-extensions.html
@@ -20,6 +20,16 @@
         justify-content: space-between;
         align-items: center;
       }
+      fieldset {
+        border: 1px solid #e5e7eb;
+        border-radius: 0.375rem;
+        margin-bottom: 1rem;
+        padding: 0.5rem 1rem;
+      }
+      legend {
+        padding: 0 0.5rem;
+        font-weight: 600;
+      }
       ol {
         list-style: none;
         padding: 0;
@@ -58,56 +68,73 @@
    </style>
 </head>
 <body>
-   <h3>Awesome VSCode Extensions
+   <h3>
+      Awesome VSCode Extensions
       <a target="_blank" href="https://github.com/netanel-haber/profile/edit/main/public/vscode-extensions.html">
          <img height="20px" src="/github.webp" alt="Edit List on github" />
       </a>
    </h3>
-   <ol>
-      <li>
-         <a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens" target="_blank">GitLens</a>
-         <span>-</span>Essential
-      </li>
-      <li>
-         <a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack" target="_blank">Remote Development</a>
-         <span>-</span>Connect to remote envs
-      </li>
-      <li>
-         <a href="https://marketplace.visualstudio.com/items?itemName=ms-kubernetes-tools.vscode-kubernetes-tools" target="_blank">Kubernetes</a>
-         <span>-</span>Best K8s UI
-      </li>
-      <li>
-         <a href="https://marketplace.visualstudio.com/items?itemName=mechatroner.rainbow-csv" target="_blank">Rainbow CSV</a>
-         <span>-</span>CSV/TSV highlighting
-      </li>
-      <li>
-         <a href="https://marketplace.visualstudio.com/items?itemName=alefragnani.Bookmarks" target="_blank">Bookmarks</a>
-         <span>-</span>JetBrains-like
-      </li>
-      <li>
-         <a href="https://marketplace.visualstudio.com/items?itemName=naumovs.color-highlight" target="_blank">Color Highlight</a>
-         <span>-</span>For CSS colors
-      </li>
-      <li>
-         <a href="https://marketplace.visualstudio.com/items?itemName=jakearl.search-editor-apply-changes" target="_blank">Search Editor Apply Changes</a>
-         <span>-</span>Emacs-style compile mode
-      </li>
-      <li>
-         <a href="https://marketplace.visualstudio.com/items?itemName=rsbondi.highlight-words" target="_blank">Highlight Words</a>
-         <span>-</span>Track symbols easily
-      </li>
-      <li>
-         <a href="https://marketplace.visualstudio.com/items?itemName=styled-components.vscode-styled-components" target="_blank">Styled Components</a>
-         <span>-</span>Only if using styled-components
-      </li>
-      <li>
-         <a href="https://marketplace.visualstudio.com/items?itemName=yardensachs.copy-python-path" target="_blank">Copy Python Path</a>
-         <span>-</span>Convenient path copying
-      </li>
-      <li>
-         <a href="https://marketplace.visualstudio.com/items?itemName=usernamehw.errorlens" target="_blank">Error Lens</a>
-         <span>-</span>Inline error messaging
-      </li>
-   </ol>
+
+   <fieldset>
+      <legend>Essentials that are almost part of the editor</legend>
+      <ol>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens" target="_blank">GitLens</a>
+            <span>-</span>Essential
+         </li>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack" target="_blank">Remote Development</a>
+            <span>-</span>Connect to remote envs
+         </li>
+      </ol>
+   </fieldset>
+
+   <fieldset>
+      <legend>General niceties</legend>
+      <ol>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=rsbondi.highlight-words" target="_blank">Highlight Words</a>
+            <span>-</span>Track symbols easily
+         </li>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=usernamehw.errorlens" target="_blank">Error Lens</a>
+            <span>-</span>Inline error messaging
+         </li>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=alefragnani.Bookmarks" target="_blank">Bookmarks</a>
+            <span>-</span>JetBrains-like
+         </li>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=jakearl.search-editor-apply-changes" target="_blank">Search Editor Apply Changes</a>
+            <span>-</span>Emacs-style compile mode
+         </li>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=naumovs.color-highlight" target="_blank">Color Highlight</a>
+            <span>-</span>Highlight color strings, mostly css work
+         </li>
+      </ol>
+   </fieldset>
+
+   <fieldset>
+      <legend>Extensions only needed for some workflows</legend>
+      <ol>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=ms-kubernetes-tools.vscode-kubernetes-tools" target="_blank">Kubernetes</a>
+            <span>-</span>Best K8s UI
+         </li>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=mechatroner.rainbow-csv" target="_blank">Rainbow CSV</a>
+            <span>-</span>CSV/TSV highlighting
+         </li>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=yardensachs.copy-python-path" target="_blank">Copy Python Path</a>
+            <span>-</span>Convenient path copying
+         </li>
+         <li>
+            <a href="https://marketplace.visualstudio.com/items?itemName=styled-components.vscode-styled-components" target="_blank">Styled Components</a>
+            <span>-</span>Only if using styled-components
+         </li>
+      </ol>
+   </fieldset>
 </body>
 </html>
