--- a/public/vscode-extensions.html
+++ b/public/vscode-extensions.html
@@ -76,12 +76,18 @@
    </h3>
 
    <fieldset>
+      <legend>Builtin features you should know</legend>
+      <ol>
+         <li>Fuzzy symbol search (v1.89+)</li>
+         <li>New auto-indent settings</li>
+         <li>Timeline for local history</li>
+         <li>Check existing features before installing an extension</li>
+      </ol>
+   </fieldset>
+
+   <fieldset>
       <legend>Essentials that are almost part of the editor</legend>
       <ol>
-         <li>
-            <a href="https://marketplace.visualstudio.com/items?itemName=eamodio.gitlens" target="_blank">GitLens</a>
-            <span>-</span>Essential
-         </li>
          <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack" target="_blank">Remote Development</a>
             <span>-</span>Connect to remote envs
