--- a/public/vscode-extensions.html
+++ b/public/vscode-extensions.html
@@ -23,15 +23,15 @@
       fieldset {
         border: 1px solid #e5e7eb;
         border-radius: 0.375rem;
-        margin-bottom: 1rem;
-        padding: 0.5rem 1rem;
+        margin-bottom: 0.25rem;
+        padding: 0.25rem 0.25rem;
       }
       legend {
-        padding: 0 0.5rem;
+        padding: 0 0.25rem;
         font-weight: 600;
       }
       details {
-        margin-bottom: 1rem;
+        margin-bottom: 0.5rem;
         border: 1px solid #e5e7eb;
         border-radius: 0.375rem;
         padding: 0.5rem 1rem;
@@ -95,30 +95,29 @@
          </li>
          <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=ms-vscode-remote.vscode-remote-extensionpack" target="_blank">Remote Development</a>
-            <span>-</span>Connect to remote envs
+            <span>-</span>Connect to local/remote machines/containers
          </li>
       </ol>
    </fieldset>
 
    <details>
-      <summary>Builtin features you should know</summary>
+      <summary>Builtin features you should know before you run looking for an extension</summary>
       <ol>
          <li>
             <a href="https://code.visualstudio.com/updates/v1_89#_quick-search" target="_blank">
-               Fuzzy symbol search (v1.89+)
-            </a>
-         </li>
-         <li>
-            <a href="https://code.visualstudio.com/updates/v1_89#_new-auto-indentation-setting" target="_blank">
-               New auto-indent settings
+               All Workspace Fuzzy symbol search (v1.89+)
             </a>
          </li>
          <li>
             <a href="https://code.visualstudio.com/updates/v1_55#_timeline-view" target="_blank">
-               Timeline for local history
+               Timeline for Jetbrains-like local history
             </a>
          </li>
-         <li>Check existing features before installing an extension</li>
+         <li>
+            <a href="https://code.visualstudio.com/updates/v1_89#_new-auto-indentation-setting" target="_blank">
+               Python auto-indent settings
+            </a>
+         </li>
       </ol>
    </details>
 
@@ -127,7 +126,7 @@
       <ol>
          <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=rsbondi.highlight-words" target="_blank">Highlight Words</a>
-            <span>-</span>Track symbols easily
+            <span>-</span>Track numerous symbols easily
          </li>
          <li>
             <a href="https://marketplace.visualstudio.com/items?itemName=usernamehw.errorlens" target="_blank">Error Lens</a>
