--- a/public/mac-apps.html
+++ b/public/mac-apps.html
@@ -1,99 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Suggested Mac Apps</title>
-      <style>
-         body {
-         font-family: sans-serif;
-         background-color: #f3f4f6;
-         color: #1f2937;
-         padding: 1rem;
-         overflow: auto;
-         box-sizing: border-box;
-         }
-         h3 {
-         margin-bottom: 0.75rem;
-         font-weight: 600;
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
-         }
-         ol {
-         list-style: none;
-         padding: 0;
-         }
-         li {
-         margin-bottom: 0.5rem;
-         padding: 0.25rem;
-         background-color: #ffffff;
-         border: 1px solid #e5e7eb;
-         border-radius: 0.375rem;
-         display: flex;
-         align-items: center;
-         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
-         }
-         a {
-         color: #2563eb;
-         font-weight: bold;
-         text-decoration: none;
-         }
-         a:hover {
-         text-decoration: underline;
-         }
-         kbd {
-         margin: 0 0.25rem;
-         padding: 0.25rem 0.5rem;
-         font-size: 0.875rem;
-         font-weight: 600;
-         color: #1f2937;
-         background-color: #f3f4f6;
-         border: 1px solid #e5e7eb;
-         border-radius: 0.25rem;
-         }
-         span {
-         margin: 0px 6px;
-         }
-      </style>
-   </head>
-   <body>
-      <h3>Awesome Mac Apps (in order) <a target="_blank" href="https://github.com/netanel-haber/profile/edit/main/public/mac-apps.html"><img height="20px" src="/github.webp" alt="Edit List on github" /></a></h3>
-      <ol>
-         <li>
-            <a href="https://alt-tab-macos.netlify.app/" target="_blank">AltTab</a>
-            <span>-</span>Windows-like
-            <kbd>Cmd</kbd>+
-            <kbd>Tab</kbd>
-         </li>
-         <li>
-            <a href="https://rectangleapp.com/" target="_blank">Rectangle</a>
-            <span>-</span>Snap windows with keyboard
-         </li>
-         <li>
-            <a href="https://menubarx.app/" target="_blank">MenuBarX</a>
-            <span>-</span>Dropdown browser tabs from top bar
-         </li>
-         <li>
-            <a href="https://github.com/dwarvesf/hidden" target="_blank">HiddenBar</a>
-            <span>-</span>Simplify top bar icons
-         </li>
-         <li>
-            <a href="https://apps.apple.com/us/app/authenticator-app/id1538761576" target="_blank">Authenticator (2Stable)</a>
-            <span>-</span>2FA Authentication MFA & OTP
-         </li>
-         <li>
-            <a href="https://brightintosh.de" target="_blank">Brightintosh</a>
-            <span>-</span>Always allow max brightness
-         </li>
-         <li>
-            <a href="https://freemacsoft.net/appcleaner/" target="_blank">AppCleaner</a>
-            <span>-</span>Delete apps and all their files
-         </li>
-         <li>
-            <a href="https://apps.apple.com/us/app/amphetamine/id937984704" target="_blank">Amphetamine</a>
-            <span>-</span>Keep Your Mac Awake
-         </li>
-      </ol>
-   </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Suggested Mac Apps</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            background-color: #f3f4f6;
+            color: #1f2937;
+            padding: 1rem;
+            overflow: auto;
+            box-sizing: border-box;
+        }
+        h3 {
+            margin-bottom: 0.75rem;
+            font-weight: 600;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        ol {
+            list-style: none;
+            padding: 0;
+        }
+        li {
+            margin-bottom: 0.5rem;
+            padding: 0.25rem;
+            background-color: #ffffff;
+            border: 1px solid #e5e7eb;
+            border-radius: 0.375rem;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+        }
+        a {
+            color: #2563eb;
+            font-weight: bold;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+        kbd {
+            margin: 0 0.25rem;
+            padding: 0.25rem 0.5rem;
+            font-size: 0.875rem;
+            font-weight: 600;
+            color: #1f2937;
+            background-color: #f3f4f6;
+            border: 1px solid #e5e7eb;
+            border-radius: 0.25rem;
+        }
+        span {
+            margin: 0px 6px;
+        }
+        .raycast {
+            margin-left: 1rem;
+        }
+        .raycast a {
+            text-decoration: none;
+            font-size: 1.2rem;
+        }
+    </style>
+</head>
+<body>
+    <h3>Awesome Mac Apps (in order) <a target="_blank" href="https://github.com/netanel-haber/profile/edit/main/public/mac-apps.html"><img height="20px" src="/github.webp" alt="Edit List on github" /></a></h3>
+    <ol>
+        <li>
+            <div>
+                <a href="https://alt-tab-macos.netlify.app/" target="_blank">AltTab</a>
+                <span>-</span>Windows-like
+                <kbd>Cmd</kbd>+
+                <kbd>Tab</kbd>
+            </div>
+            <div class="raycast">
+                <a href="https://www.raycast.com/store/commands/window-management" target="_blank">✅</a>
+            </div>
+        </li>
+        <li>
+            <div>
+                <a href="https://rectangleapp.com/" target="_blank">Rectangle</a>
+                <span>-</span>Snap windows with keyboard
+            </div>
+            <div class="raycast">
+                <a href="https://www.raycast.com/store/commands/window-management" target="_blank">✅</a>
+            </div>
+        </li>
+        <li>
+            <div>
+                <a href="https://menubarx.app/" target="_blank">MenuBarX</a>
+                <span>-</span>Dropdown browser tabs from top bar
+            </div>
+        </li>
+        <li>
+            <div>
+                <a href="https://github.com/dwarvesf/hidden" target="_blank">HiddenBar</a>
+                <span>-</span>Simplify top bar icons
+            </div>
+        </li>
+        <li>
+            <div>
+                <a href="https://apps.apple.com/us/app/authenticator-app/id1538761576" target="_blank">Authenticator (2Stable)</a>
+                <span>-</span>2FA Authentication MFA & OTP
+            </div>
+        </li>
+        <li>
+            <div>
+                <a href="https://brightintosh.de" target="_blank">Brightintosh</a>
+                <span>-</span>Always allow max brightness
+            </div>
+            <div class="raycast">
+                <a href="https://www.raycast.com/store/commands/system-controls" target="_blank">✅</a>
+            </div>
+        </li>
+        <li>
+            <div>
+                <a href="https://freemacsoft.net/appcleaner/" target="_blank">AppCleaner</a>
+                <span>-</span>Delete apps and all their files
+            </div>
+            <div class="raycast">
+                <a href="https://www.raycast.com/store/commands/system-controls" target="_blank">✅</a>
+            </div>
+        </li>
+        <li>
+            <div>
+                <a href="https://apps.apple.com/us/app/amphetamine/id937984704" target="_blank">Amphetamine</a>
+                <span>-</span>Keep Your Mac Awake
+            </div>
+            <div class="raycast">
+                <a href="https://www.raycast.com/store/commands/system-controls" target="_blank">✅</a>
+            </div>
+        </li>
+    </ol>
+</body>
 </html>
