--- a/public/mac-apps.html
+++ b/public/mac-apps.html
@@ -123,8 +123,8 @@
                 <a href="https://apps.apple.com/us/app/amphetamine/id937984704" target="_blank">Amphetamine</a>
                 <span>-</span>Keep Your Mac Awake
             </div>
-            <div class="raycast">
-                <a href="https://www.raycast.com/store/commands/system-controls" target="_blank">✅</a>
+            <div class="raycast-extension">
+                <a href="https://www.raycast.com/mooxl/coffee?ref=tsamoudakis.com" target="_blank">✅</a>
             </div>
         </li>
     </ol>
