--- a/public/mac-apps.html
+++ b/public/mac-apps.html
@@ -75,6 +75,9 @@
                 <kbd>Cmd</kbd>+
                 <kbd>Tab</kbd>
             </div>
+<div class="raycast">
+                <a href="https://www.raycast.com/changelog/1-19-0" target="_blank">✅</a>
+            </div>
         </li>
         <li>
             <div>
