--- a/public/thai-fruit.html
+++ b/public/thai-fruit.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -26,6 +25,7 @@
             <h2>Durian</h2>
             <p>Location: koh samui</p>
             <img src="./durian.png" alt="Durian" style="max-width:300px;">
+            <img src="./durian2.png" alt="Durian-2" style="max-width:300px;">
         </li>
     
         <li>
