--- a/public/thai-fruit.html
+++ b/public/thai-fruit.html
@@ -24,11 +24,6 @@
             font-size: 2.5rem;
         }
 
-        header p {
-            margin: 0.5rem 0 0;
-            font-size: 1.25rem;
-        }
-
         main {
             max-width: 1200px;
             margin: 2rem auto;
@@ -83,8 +78,7 @@
 </head>
 <body>
     <header>
-        <h1>Fruit in Thailand</h1>
-        <p>Explore the tropical flavors of Thailand</p>
+        <h1>Fruit I ate in Thailand</h1>
     </header>
     <main>
         <ul>
