--- a/public/thai-fruit.html
+++ b/public/thai-fruit.html
@@ -85,28 +85,28 @@
             <li>
                 <h2>Indian Jujube</h2>
                 <p>Location: Krabi Bus Terminal</p>
-                <img src="./indian-jujube.jpg" alt="Indian Jujube">
+                <img src="/indian-jujube.jpg" alt="Indian Jujube">
             </li>
             <li>
                 <h2>Mangosteen</h2>
                 <p>Location: Chiang Mai</p>
-                <img src="./mangosteen.jpg" alt="Mangosteen">
+                <img src="/mangosteen.jpg" alt="Mangosteen">
             </li>
             <li>
                 <h2>Durian</h2>
                 <p>Location: Koh Samui</p>
-                <img src="./durian.jpg" alt="Durian">
-                <img src="./durian2.jpg" alt="Durian-2" style="margin-top: 0.5rem;">
+                <img src="/durian.jpg" alt="Durian">
+                <img src="/durian2.jpg" alt="Durian-2" style="margin-top: 0.5rem;">
             </li>
             <li>
                 <h2>Rose Apple</h2>
                 <p>Location: Krabi Bus Terminal</p>
-                <img src="./rose-apple.jpg" alt="Rose Apple">
+                <img src="/rose-apple.jpg" alt="Rose Apple">
             </li>
             <li>
                 <h2>Golden Gooseberry</h2>
                 <p>Location: Koh Samui</p>
-                <img src="./golden-gooseberry.jpg" alt="Golden Gooseberry">
+                <img src="/golden-gooseberry.jpg" alt="Golden Gooseberry">
             </li>
         </ul>
     </main>
