--- a/public/thai-fruit.html
+++ b/public/thai-fruit.html
@@ -154,8 +154,9 @@
             </li>
             <li onclick="showModal('/jackfruit.jpg')">
                 <h2 onclick="event.stopPropagation(); window.open('https://en.wikipedia.org/wiki/Jackfruit', '_blank')">Jackfruit</h2>
-                <p>Location: Bangkok</p>
+                <p>Location: คลองศกแคมป์ (Klongsok Camp)</p>
                 <img src="/jackfruit.jpg" alt="Jackfruit">
+<img src="/jackfruit2.jpg" alt="Jackfruit-2" style="margin-top: 0.5rem;">
             </li>
         </ul>
     </main>
